--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -17,6 +17,9 @@ hover_bar_color=BDAE93
 font_size=16
 # horizontal font padding
 font_pad=4
+# font borders
+font_border_width=2
+font_border_color=000000
 
 # trigger range for the progressbar
 proximity=40
