fix incorrect docs

--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -1,6 +1,6 @@
 # height of the progressbar when hovering over it
 pbar_h=12
-# height of the proximity when minimized.
+# height of the progressbar when minimized.
 # set to 0 disable minimized state.
 pbar_minimized_h=4
 # color of progressbar - RRGGBB format
