use percentage for height instead of pixels
allows the ui elements to scale more nicely at different window sizes.

ref: https://codeberg.org/NRK/mpv-toolbox/pulls/1#issuecomment-688163

--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -1,13 +1,14 @@
 # height of the progressbar when hovering over it
-pbar_h=12
+# the value is in percentage, 2 means 2% of the screen height
+pbar_height=2
 # height of the progressbar when minimized.
 # set to 0 disable minimized state.
-pbar_minimized_h=4
+pbar_minimized_height=0.5
 # color of progressbar - RRGGBB format
 pbar_color=CCCCCC
 
-# height of the cachebar. set to 0 to disable.
-cachebar_h=2
+# height of the cachebar in percentage. set to 0 to disable.
+cachebar_height=0.24
 cachebar_color=1C6C89
 
 # color of the hover bar
