allow selecting "playtime-remaining" for timeline rhs

--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -11,6 +11,11 @@ pbar_color=CCCCCC
 cachebar_height=0.24
 cachebar_color=1C6C89
 
+# what to show in the right hand side of the timeline. valid options are:
+# 	time-remaining: shows the remaining time (default)
+# 	playtime-remaining: shows the remaining time scaled by the playback speed
+timeline_rhs=time-remaining
+
 # color of the hover bar
 hover_bar_color=BDAE93
 
