config: rename autohide -> minimize_timeout

--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -42,4 +42,4 @@ chapter_marker_border_width=1
 chapter_marker_border_color=161616
 
 # seconds before auto minimizing
-autohide=3
+minimize_timeout=3
