document how to disable auto-minimize

--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -41,5 +41,5 @@ chapter_marker_color=BDAE93
 chapter_marker_border_width=1
 chapter_marker_border_color=161616
 
-# seconds before auto minimizing
+# seconds before auto minimizing. set to 0 to disable auto-minimize.
 minimize_timeout=3
