--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -1,10 +1,14 @@
+# example config for mfpbar.
+#
+# NOTE: all colors are in RRGGBB format.
+
 # height of the progressbar when hovering over it
 # the value is in percentage, 2 means 2% of the screen height
 pbar_height=2
 # height of the progressbar when minimized.
 # set to 0 disable minimized state.
 pbar_minimized_height=0.5
-# color of progressbar - RRGGBB format
+# color of progressbar
 pbar_color=CCCCCC
 
 # height of the cachebar in percentage. set to 0 to disable.
