mfpbar: add option to hide when fullscreen
enabled by default - because if someone goes fullscreen it's probably
because they want to view the video without distraction.

--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -10,6 +10,9 @@ pbar_height=2
 pbar_minimized_height=0.5
 # color of progressbar
 pbar_color=CCCCCC
+# hide progressbar when fullscreen
+pbar_fullscreen_hide=yes
+
 
 # height of the cachebar in percentage. set to 0 to disable.
 cachebar_height=0.24
