--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -10,6 +10,9 @@ pbar_height=2
 pbar_minimized_height=0.5
 # color of progressbar
 pbar_color=CCCCCC
+# opacity of the progressbar background. in hex.
+# "00" means fully black, "FF" means fully transparent.
+pbar_bg_alpha=3F
 # hide progressbar when fullscreen
 pbar_fullscreen_hide=yes
 
