mfpbar: add uncached color and opacity
set to a red-ish color by default. can be disabled via setting the
opacity to "FF".

partially fixes: https://codeberg.org/NRK/mpv-toolbox/issues/3

--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -20,6 +20,10 @@ pbar_fullscreen_hide=yes
 # height of the cachebar in percentage. set to 0 to disable.
 cachebar_height=0.24
 cachebar_color=1C6C89
+# color and opacity of the uncached area.
+# setting the alpha to "FF" will make it fully transparent (which in effect disables it).
+cachebar_uncached_color=CC3A2A
+cachebar_uncached_alpha=70
 
 # what to show in the right hand side of the timeline. valid options are:
 # 	time-remaining: shows the remaining time (default)
