mfpbar: allow using percentage for proximity
ref: https://codeberg.org/NRK/mpv-toolbox/pulls/15

--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -42,6 +42,8 @@ font_border_width=2
 font_border_color=000000
 
 # trigger range for the progressbar
+# uses pixel count by default, e.g "40" means 40 pixels
+# append '%' to use percentage of window height e.g "40%"
 proximity=40
 
 # width of preview border. set to 0 to disable.
