mfpbar: add chapter snapping support
kinda nice. but also creates some ambiguities, for example if
the user wanted to seek to near a chapter instead of snapping
onto it.

might need to add another binding such as shift+click or
ctrl+click for exact seek. or maybe chapter snapping shouldn't
be part of mfpbar to begin with since mdmenu can jump to a
chapter already.

for now, i'll just merge this. will deal with exact-seek issue
later and if needed.

--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -56,6 +56,9 @@ chapter_marker_color=BDAE93
 # chapter marker border width. set 0 to disable.
 chapter_marker_border_width=1
 chapter_marker_border_color=161616
+# proximity for triggering chapter snapping. 0 to disable chapter snapping.
+# can use either pixel or percentage as `proximity`
+chapter_proximity=0.64%
 
 # seconds before auto minimizing. set to 0 to disable auto-minimize.
 minimize_timeout=3
