mfpbar: add a bindable action to temporarily show the bar
it displays the bar similar to when it's active, but without the
thumbnail/chapter/etc that show at the mouse position.

also rename `state.timeout` to `state.minimize_timeout` to
prevent potential confusion

Reviewed-on: https://codeberg.org/NRK/mpv-toolbox/pulls/17

--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -62,3 +62,5 @@ chapter_proximity=0.64%
 
 # seconds before auto minimizing. set to 0 to disable auto-minimize.
 minimize_timeout=3
+# default timeout duration (in seconds) for the "maximize" binding.
+maximize_timeout=1.5
