mfpbar: add an option to auto maximize on seek

--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -64,3 +64,5 @@ chapter_proximity=0.64%
 minimize_timeout=3
 # default timeout duration (in seconds) for the "maximize" binding.
 maximize_timeout=1.5
+# set to 'yes' to maximize the bar when seeking.
+maximize_on_seek=no
