--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -1,6 +1,6 @@
 # example config for mfpbar.
 #
-# NOTE: all colors are in RRGGBB format.
+# NOTE: all colors are css-style hex colors (without alpha), e.g RRGGBB.
 
 # height of the progressbar when hovering over it
 # the value is in percentage, 2 means 2% of the screen height
