--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -33,6 +33,8 @@ timeline_rhs=time-remaining
 # color of the hover bar
 hover_bar_color=BDAE93
 
+# color of the font/text
+font_color=EBEBEB
 # font size
 font_size=16
 # horizontal font padding
