--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -10,8 +10,10 @@ pbar_height=2
 pbar_minimized_height=0.5
 # color of progressbar
 pbar_color=CCCCCC
+# color of the progressbar background
+pbar_bg_color=000000
 # opacity of the progressbar background. in hex.
-# "00" means fully black, "FF" means fully transparent.
+# "00" means fully visible, "FF" means fully transparent.
 pbar_bg_alpha=3F
 # hide progressbar when fullscreen
 pbar_fullscreen_hide=yes
