mfpbar: allow specifying alpha in config
this allows specifying css style alpha in the config for all the
colors.

pbar_bg_alpha and cachebar_uncached_alpha are now removed from
the example config, but some compat code was added so that
existing config that uses these will keep working fine.

ref: https://codeberg.org/NRK/mpv-toolbox/pulls/19
Co-authored-by: Calla <32691832+BanchouBoo@users.noreply.github.com>

--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -1,6 +1,7 @@
 # example config for mfpbar.
 #
-# NOTE: all colors are css-style hex colors (without alpha), e.g RRGGBB.
+# NOTE: all colors values are in css-style hex color:
+# https://developer.mozilla.org/en-US/docs/Web/CSS/hex-color
 
 # height of the progressbar when hovering over it
 # the value is in percentage, 2 means 2% of the screen height
@@ -11,10 +12,7 @@ pbar_minimized_height=0.5
 # color of progressbar
 pbar_color=CCCCCC
 # color of the progressbar background
-pbar_bg_color=000000
-# opacity of the progressbar background. in hex.
-# "00" means fully visible, "FF" means fully transparent.
-pbar_bg_alpha=3F
+pbar_bg_color=000000C0
 # hide progressbar when fullscreen
 pbar_fullscreen_hide=yes
 
@@ -22,10 +20,8 @@ pbar_fullscreen_hide=yes
 # height of the cachebar in percentage. set to 0 to disable.
 cachebar_height=0.24
 cachebar_color=1C6C89
-# color and opacity of the uncached area.
-# setting the alpha to "FF" will make it fully transparent (which in effect disables it).
-cachebar_uncached_color=CC3A2A
-cachebar_uncached_alpha=70
+# color of the uncached area.
+cachebar_uncached_color=CC3A2A8F
 
 # what to show in the right hand side of the timeline. valid options are:
 # 	time-remaining: shows the remaining time (default)
