mfpbar: allow disabling locking hovers to chapter time

--- a/mfpbar.conf
+++ b/mfpbar.conf
@@ -66,3 +66,7 @@ minimize_timeout=3
 maximize_timeout=1.5
 # automatically maximize the progressbar when seeking.
 maximize_on_seek=yes
+
+# when hovering over a chapter diamond, if the time position used for displaying
+# the preview should be locked to the middle of the diamond / chapter time.
+hover_lock_to_chapter_time=yes
